--- a/eurovision-2019.ipynb
+++ b/eurovision-2019.ipynb
@@ -2621,7 +2621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Desde 2016 el voto del público se suma al voto del jurado por separado. Resulta interesante analizarlo aparte; sobre todo porque desde que se instauró este sistema, las conexiones via satélite con los distintos países son sólo para revelar estas puntuaciones, y es ahí donde empieza la posibilidad de intentar vaticinios sobre las mismas (las del jurado se computan todas previamente)."
+    "Desde 2016 el voto del público se suma al voto del jurado por separado. Resulta interesante analizarlo aparte; sobre todo porque nos servirá para analizar algunos aspectos más tarde."
    ]
   },
   {
